--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -1,29 +1,13 @@
-name: CI/CD Pipeline
+name: Secrets
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch
 
 jobs:
-  build:
+  top_secrets:
     runs-on: ubuntu-latest
+    env:
+      test: "test"
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '20'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run build
-        run: npm run build
-
-      - name: Run tests
-        run: npm test
-        env:
-          API_KEY: ${{ secrets.API_KEY }}
+      - name: Read a variable
+        run: echo "API_KEY: ${{ vars.test }}"
