--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -10,4 +10,4 @@ jobs:
       test: "test"
     steps:
       - name: Read a variable
-        run: echo "API_KEY: ${{ vars.test }}"
+        run: echo "API_KEY: ${{ secrets.API_KEY }}"
