--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -6,8 +6,7 @@ on:
 jobs:
   top_secrets:
     runs-on: ubuntu-latest
-    env:
-      test: "test"
     steps:
-      - name: Read a variable
-        run: echo "API_KEY"
+      - name: Hello world action
+        with: # Set the secret as an input
+          super_secret: ${{ secrets.API_KEY }}
