--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -6,7 +6,9 @@ on:
 jobs:
   top_secrets:
     runs-on: ubuntu-latest
+    env:
+      API_KEY: ${{ secrets.API_KEY }}
     steps:
-      - name: Hello world action
-        with: # Set the secret as an input
-          super_secret: ${{ secrets.API_KEY }}
+      - name: Here is your API_KEY
+        run: echo "$API_KEY"
+        
