--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -1,14 +1,26 @@
-name: Secrets
+name: Read Secret and Save as Artifact
 
 on:
-  workflow_dispatch
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Environment to deploy'
+        required: true
+        default: 'development'
 
 jobs:
-  top_secrets:
+  read_secret:
     runs-on: ubuntu-latest
-    env:
-      API_KEY: ${{ secrets.API_KEY }}
     steps:
-      - name: Here is your API_KEY
-        run: echo "$API_KEY"
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Save the secret to a file
+        run: echo "${{ secrets.API_KEY }}" > secret.txt
+
+      - name: Upload the secret as an artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: secret-file
+          path: secret.txt
         
