--- a/.github/workflows/run_test.yaml
+++ b/.github/workflows/run_test.yaml
@@ -26,4 +26,4 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: node test.js
+    - run: npm run test
